--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   </head>
   <body>
 
-  <h1>Word Guess Game</h1>
+  <h1>Uncle Vince's Word Guess Game</h1>
 
   <div class="container">
 
     <div class="row pb-3">
       <div class="col-sm">
-        <img src="#">
+        <img src="assets/images/vince.jpeg">
       </div>
     </div>
 
     <div class="row">
       <div class="col-sm">
-        <p>Press any key to get started!</p>
+        <p>Press any letter on your keyboard to get started!</p>
 
         <p id="wins-text">Wins: 0</p>
 
