minor update to html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p id="wins-text">Wins: 0</p>
 
-        <p id="currentWord-text"></p>
+        <p id="currentWord-text">_,_,_,_,_,_,_,_,_,_</p>
 
         <p>Number of guesses remaining</p>
 
