added audio triggers for win/lose

--- a/test.html
+++ b/test.html
@@ -5,12 +5,9 @@
     <title>Hangman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="">
   </head>
   <body>
-  <audio id="victory-audio" src="assets/audio/cheering.wav" preload="auto"></audio>
-  <audio id="loss-audio" src="assets/audio/aww.wav" preload="auto"></audio>
-
 
   <h1>Uncle Vince's Word Guess Game</h1>
 
@@ -18,16 +15,13 @@
 
     <div class="row pb-3">
       <div class="col-sm">
-        <img src="assets/images/vince.jpeg">
+        <img src="assets/images/vince.">
       </div>
     </div>
 
     <div class="row">
       <div class="col-sm">
-
-        <p id="start-text">Press any letter on your keyboard to get started!</p>
-
-        <h2 id="caption-text"></h2>
+        <p>Press any letter on your keyboard to get started!</p>
 
         <p id="wins-text">Wins: 0</p>
 
@@ -51,6 +45,6 @@
 
   </div>
 
-    <script src="assets/javascript/game.js" async defer></script>
+    <script src="assets/javascript/temp.js" async defer></script>
   </body>
 </html>
