added dynamic stick figures

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 
         <p>Number of guesses remaining</p>
 
-        <p id="guessesRem-text">5</p>
+        <p id="guessesRem-text">6</p>
 
         <p>Letters already guessed</p>
 
         <p id="alreadyGuessed-text"></p>
+
+        <img id="hangman-image" src="assets/images/hangman-images/hangman-initial.png" >
 
       </div>
     </div>
