--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <audio id="loss-audio" src="assets/audio/aww.wav" preload="auto"></audio>
 
 
-  <h1>Uncle Vince's Word Guess Game</h1>
+  <h1>Uncle Vince's Hangman Game</h1>
 
   <div class="container">
 
