updated folder casing and minor styling

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div class="row">
       <div class="col-sm">
 
-        <p id="start-text">Press any letter on your keyboard to get started!</p>
+        <p id="start-text" class="pb-2">Press any letter on your keyboard to get started!</p>
 
-        <h2 id="caption-text"></h2>
+        <h2 id="caption-text" class="pb-2"></h2>
 
         <p id="wins-text">Wins: 0</p>
 
