--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
         <p id="wins-text">Wins: 0</p>
 
+        <p>Current Word:</p>
+
         <p id="currentWord-text">_,_,_,_,_,_,_,_,_,_</p>
 
         <p>Number of guesses remaining</p>
