minor update too html, removed commas from _,_,_

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p>Current Word:</p>
 
-        <p id="currentWord-text">_,_,_,_,_,_,_,_,_,_</p>
+        <p id="currentWord-text">_ _ _ _ _ _ _ _ _ _</p>
 
         <p>Number of guesses remaining</p>
 
