--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col">
           <h1 class="display-5">Uncle Vince's Hangman Game</h1>
           <div class="lead">press any letter on your keyboard to get started!</div>
-          <div class="lead text-muted"><small>(hint: words are basketball themed)</small></div>
+          <div class="lead text-muted"><small>(hint: all words are basketball related!)</small></div>
         </div>
       </div>
 
@@ -33,7 +33,14 @@
       <div class="row my-1">
         <div id="wins-text">Wins: 0</div>
         <div class="mx-auto">
-          <h2 id="caption-text" class="pt-2"></h2>
+          <h2 id="caption-text" class="pt-3"></h2>
+        </div>
+        <div class="btn-group dropdown">
+          <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Answers
+          </button>
+          <div class="dropdown-menu" id="answerKey">
+          </div>
         </div>
       </div>
 
@@ -68,7 +75,9 @@
 
 
   </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js" async defer></script>
   </body>
 </html>
