--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       </div>
       <div class="btn-group dropdown">
         <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Answers
+          Answer
         </button>
-        <div class="dropdown-menu" id="answerKey"></div>
+        <div class="dropdown-menu" id="answerKey">
+          <div class="dropdown-item" id="dropdown-item"></div>
+        </div>
       </div>
     </div>
     <div class="row">
